--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # ⚠️ ATTENTION : Pour la production, déplace cette clé vers une variable d'environnement système !
-GEMINI_API_KEY=AIzaSyAqO4T1-K5qActibBHd2vAMPQmKTd2TRBg
+GEMINI_API_KEY=
 LAGENDA_API_URL=https://back.lagenda.bj/events/
 DEBUG=True
