--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 fastapi
 uvicorn
-requests
 python-dotenv
 google-generativeai
 httpx
@@ -8,3 +7,9 @@ slowapi
 cachetools
 jinja2
 pydantic
+
+# Tests
+pytest
+pytest-asyncio
+pytest-cov
+httpx
